example/lib/src/generated/errors/errors_localization_ar.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Arabic (`ar`).
class ErrorsLocalizationAr extends ErrorsLocalization {
  ErrorsLocalizationAr([String locale = 'ar']) : super(locale);

  @override
  String get error => 'حدث خطأ';

  @override
  String get unexpectedError => 'حدث خطأ غير متوقع';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError': 'Password should be at least 6 characters',
        'invalidEmailOrPhoneNumberError':
            'Please provide valid email or a phone number in the international format. Examples: me@example.com and +1234567890987',
        'invalidEmailError': 'Email is not valid',
        'operationNotAllowedError': 'Operation is not allowed',
        'weakPasswordError': 'Password is too weak',
        'userTokenExpiredError': 'User token expired',
        'invalidPhoneNumberError':
            'Please provide phone numbers in the international format, starting with + and the country code.',
        'invalidActionCodeError': 'Action code is not valid',
        'networkRequestFailedError': 'Network request failed',
        'tooManyRequestsError': 'Too many requests',
        'acceptTermsAndConditionsError':
            'Please accept the terms and conditions and acknowledge the privacy policy.',
        'acceptAIConsentError':
            'Please acknowledge that consultations are with an AI and not a licensed medical professional.',
        'emailOrPhoneError': 'Email or phone error',
        'passwordError': 'Password error',
        'unknownError': 'Unknown error',
        'googleSSOError': 'Google SSO error',
        'emailAlreadyInUse':
            'The email address is already in use by another account.',
        'invalidCredentialError': 'Invalid credentials',
        'invalidAppCredentialError': 'Invalid app credentials',
        'invalidVerificationCodeError': 'Invalid verification code',
        'other': 'Unknown error',
      },
    );
    return '$_temp0';
  }

  @override
  String get bugReportSentText => 'تم إرسال تقرير الخطأ بنجاح.';
}
